changed from flask to fastapi

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File",
+            "name": "Python: FastAPI",
             "type": "python",
-            "cwd": "${workspaceFolder}",
             "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal",
+            "module": "uvicorn",
+            "cwd": "${workspaceFolder}/backend",
+            "args": [
+                "app.main:app",
+                "--reload"
+            ],
+            "jinja": true,
             "justMyCode": true
         }
     ]
