--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,10 @@
 {
-    "python.formatting.provider": "black",
-    "python.languageServer": "Pylance",
-    "python.linting.lintOnSave": true,
-    "python.linting.flake8Enabled": true,
-    "python.linting.flake8Args": [
-        "--max-line-length=79",
-        "extend-ignore = E203"
-    ],
-    "python.formatting.blackArgs": [
-        "--line-length=79"
-    ],
-    "python.linting.enabled": true,
+  "python.formatting.provider": "black",
+  "python.languageServer": "Pylance",
+  "python.linting.lintOnSave": true,
+  "python.linting.flake8Enabled": true,
+  "python.linting.flake8Args": ["--max-line-length=79", "extend-ignore = E203"],
+  "python.formatting.blackArgs": ["--line-length=79"],
+  "python.linting.enabled": true,
+  "prettier.enable": true
 }
