--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,47 +1,44 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Python: FastAPI",
-            "type": "python",
-            "request": "launch",
-            "module": "uvicorn",
-            "cwd": "${workspaceFolder}/backend",
-            "args": [
-                "app.main:app",
-                "--reload"
-            ],
-            "jinja": true,
-            "justMyCode": true
-        },
-        {
-            "name": "Next.js: debug server-side",
-            "type": "node-terminal",
-            "request": "launch",
-            "cwd": "${workspaceFolder}/frontend",
-            "command": "npm run dev"
-          },
-          {
-            "name": "Next.js: debug client-side",
-            "type": "pwa-chrome",
-            "request": "launch",
-            "cwd": "${workspaceFolder}/frontend",
-            "url": "http://localhost:3000"
-          },
-          {
-            "name": "Next.js: debug full stack",
-            "type": "node-terminal",
-            "request": "launch",
-            "command": "npm run dev",            
-            "cwd": "${workspaceFolder}/frontend",
-            "serverReadyAction": {
-              "pattern": "started server on .+, url: (https?://.+)",
-              "uriFormat": "%s",
-              "action": "debugWithChrome"
-            }
-          }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Python: FastAPI",
+      "type": "python",
+      "request": "launch",
+      "module": "uvicorn",
+      "cwd": "${workspaceFolder}/backend",
+      "args": ["app.main:app", "--reload"],
+      "jinja": true,
+      "justMyCode": true
+    },
+    {
+      "name": "Next.js: debug server-side",
+      "type": "node-terminal",
+      "request": "launch",
+      "cwd": "${workspaceFolder}/frontend",
+      "command": "npm run dev"
+    },
+    {
+      "name": "Next.js: debug client-side",
+      "type": "pwa-chrome",
+      "request": "launch",
+      "cwd": "${workspaceFolder}/frontend",
+      "url": "http://localhost:3000"
+    },
+    {
+      "name": "Next.js: debug full stack",
+      "type": "node-terminal",
+      "request": "launch",
+      "command": "npm run dev",
+      "cwd": "${workspaceFolder}/frontend",
+      "serverReadyAction": {
+        "pattern": "started server on .+, url: (https?://.+)",
+        "uriFormat": "%s",
+        "action": "debugWithChrome"
+      }
+    }
+  ]
 }
