--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,18 +1,14 @@
-
-version: '3.4'
+version: "3.4"
 
 services:
   app:
     restart: unless-stopped
     build:
       context: .
-      dockerfile: dev.Dockerfile
-    expose:
-      - 3000
-      - 8000
-    ports: [ "3000:3000", "8000:8000" ]
+      dockerfile: app.dev.Dockerfile
+    ports: ["3000:3000", "8000:8000"]
     environment:
-      NEO4J_URI: bolt://localhost:7687
+      NEO4J_URI: bolt://db:7687
     command: sleep infinity
     depends_on:
       - db
@@ -20,16 +16,10 @@ services:
       - .:/workspace:cached
 
   db:
-    image: neo4j
+    image: marcellodesales/neo4j-with-cypher-seed:latest
     restart: unless-stopped
-    ports: [7687:7687,7474:7474]      
+    ports: [7687:7687, 7474:7474]
     environment:
-      NEO4J_AUTH: none
-      NEO4J_dbms_connector_https_advertised__address: "localhost:7473" 
-      NEO4J_dbms_connector_http_advertised__address: "localhost:7474" 
-      NEO4J_dbms_connector_bolt_advertised__address: "localhost:7687" 
+      - NEO4J_AUTH=none
     volumes:
-      - $HOME/neo4j/data:/data
-      - $HOME/neo4j/logs:/logs
-      - $HOME/neo4j/import:/var/lib/neo4j/import
-      - $HOME/neo4j/plugins:/plugins
+      - ./backend/tests/seed.cql:/cyphers/seed.cql
