--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,8 +2,11 @@ aniso8601==9.0.1
 anyio==3.5.0
 asgiref==3.5.1
 attrs==21.4.0
+bcrypt==3.2.2
 black==22.3.0
+cffi==1.15.0
 click==8.1.3
+ecdsa==0.17.0
 fastapi==0.77.1
 h11==0.13.0
 idna==3.3
@@ -14,15 +17,21 @@ MarkupSafe==2.1.1
 mypy-extensions==0.4.3
 neo4j==4.4.3
 packaging==21.3
+passlib==1.7.4
 pathspec==0.9.0
 platformdirs==2.5.2
 pluggy==1.0.0
 py==1.11.0
+pyasn1==0.4.8
+pycparser==2.21
 pydantic==1.9.0
 pyparsing==3.0.9
 pytest==7.1.2
 python-dotenv==0.20.0
+python-jose==3.3.0
+python-multipart==0.0.5
 pytz==2022.1
+rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 starlette==0.19.1
