--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@types/d3": "^7.4.0",
+    "d3-dtree": "^2.4.1",
     "framer-motion": "^6.3.3",
     "next": "^12.1.6",
     "react": "^18.1.0",
