--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,8 +10,10 @@ services:
     environment:
       NEO4J_URI: bolt://db:7687
       SECRET_KEY: test
+      REFRESH_SECRET_KEY: test2
       JWT_ALGORITHM: HS256
       ACCESS_TOKEN_EXPIRE_MINUTES: 30
+      REFRESH_TOKEN_EXPIRE_MINUTES: 1440
     command: sleep infinity
     depends_on:
       - db
