add lodash for dtree

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/d3": "^7.4.0",
     "d3-dtree": "^2.4.1",
     "framer-motion": "^6.3.3",
+    "lodash": "^4.17.21",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
