--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,10 @@
   "python.languageServer": "Pylance",
   "python.linting.lintOnSave": true,
   "python.linting.flake8Enabled": true,
-  "python.linting.flake8Args": ["--max-line-length=79", "extend-ignore = E203"],
+  "python.linting.flake8Args": [
+    "--extend-ignore = E203",
+    "--max-line-length=79"
+  ],
   "python.formatting.blackArgs": ["--line-length=79"],
   "python.linting.enabled": true,
   "prettier.enable": true,
