--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,16 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "DevContainer: FastAPI",
+      "type": "python",
+      "request": "launch",
+      "module": "uvicorn",
+      "cwd": "${workspaceFolder}/backend",
+      "args": ["app.main:app", "--reload"],
+      "jinja": true,
+      "justMyCode": true
+    },
+    {
       "name": "Python: FastAPI",
       "type": "python",
       "request": "launch",
