--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.0",
-    "@chakra-ui/react": "^1.8.8",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@chakra-ui/icons": "^2.0.10",
+    "@chakra-ui/react": "^2.0.0",
     "@types/d3": "^7.4.0",
     "d3-dtree": "^2.4.1",
     "framer-motion": "^6.3.3",
     "lodash": "^4.17.21",
     "next": "^12.1.6",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "use-http": "^1.0.26"
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
