--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
           uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
           with:
             context: backend
-            file: backend.prod.Dockerfile
+            file: backend/backend.prod.Dockerfile
             push: true
             tags: |
               ${{ env.IMAGE_NAME}}:${{ github.sha }}
