fix vscode debug config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,6 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "DevContainer: FastAPI",
-      "type": "python",
-      "request": "launch",
-      "module": "uvicorn",
-      "cwd": "${workspaceFolder}/backend",
-      "args": ["app.main:app", "--reload"],
-      "jinja": true,
-      "justMyCode": true
-    },
-    {
       "name": "Python: FastAPI",
       "type": "python",
       "request": "launch",
@@ -24,12 +14,13 @@
       "jinja": true,
       "justMyCode": true,
       "env": {
-        "NEO4J_URI": "bolt://localhost:7687",
+        "NEO4J_URI": "bolt://db:7687",
         "SECRET_KEY": "test",
         "REFRESH_SECRET_KEY": "test2",
         "JWT_ALGORITHM": "HS256",
         "ACCESS_TOKEN_EXPIRE_MINUTES": "30",
-        "REFRESH_TOKEN_EXPIRE_MINUTES": "1440"
+        "REFRESH_TOKEN_EXPIRE_MINUTES": "1440",
+        "ADMIN_PASSWORD": "pass"
       }
     },
     {
