--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,8 @@
         "JWT_ALGORITHM": "HS256",
         "ACCESS_TOKEN_EXPIRE_MINUTES": "30",
         "REFRESH_TOKEN_EXPIRE_MINUTES": "1440",
-        "ADMIN_PASSWORD": "pass"
+        "ADMIN_PASSWORD": "pass",
+        "FRONTEND_URL": "http://localhost:3001"
       }
     },
     {
