--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,8 +4,11 @@ asgiref==3.5.1
 attrs==21.4.0
 bcrypt==3.2.2
 black==22.3.0
+certifi==2022.9.24
 cffi==1.15.0
+charset-normalizer==2.1.1
 click==8.1.3
+docker==6.0.1
 ecdsa==0.17.0
 fastapi==0.77.1
 h11==0.13.0
@@ -31,10 +34,13 @@ python-dotenv==0.20.0
 python-jose==3.3.0
 python-multipart==0.0.5
 pytz==2022.1
+requests==2.28.1
 rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 starlette==0.19.1
 tomli==2.0.1
 typing_extensions==4.2.0
+urllib3==1.26.12
 uvicorn==0.17.6
+websocket-client==1.4.2
